src/objects/LedgerEntryBreakout__c.object
<CustomObject>
    <fields>
        <fullName>fxLNTouringMin__c</fullName>
        <formula>(LNTouringMin__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LN Touring Min (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxMax__c</fullName>
        <formula>(Max__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Max (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxMin__c</fullName>
        <formula>(Min__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Min (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNetPerPaid__c</fullName>
        <formula>(NetPerPaid__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Net Per Paid (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNetRevenueatSellout__c</fullName>
        <formula>(NetRevenueatSellout__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Net Revenue at Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNet_Revenue__c</fullName>
        <formula>(Net_Revenue__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Net Revenue (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxOfferAtProjection__c</fullName>
        <formula>(OfferAtProjection__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Offer At Projection (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxOfferAtSellout__c</fullName>
        <formula>(OfferAtSellout__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Offer At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxOfferMax__c</fullName>
        <formula>(OfferMax__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Offer Max (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxOfferMin__c</fullName>
        <formula>(OfferMin__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Offer Min (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxOriginalFlash__c</fullName>
        <formula>(OriginalFlash__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Original Flash (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPlanAmount__c</fullName>
        <formula>(PlanAmount__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Plan Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectionAmount__c</fullName>
        <formula>(ProjectionAmount__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projection Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPromoterAmount__c</fullName>
        <formula>(PromoterAmount__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Promoter Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPromoterMax__c</fullName>
        <formula>(PromoterMax__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Promoter Max (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPromoterMin__c</fullName>
        <formula>(PromoterMin__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Promoter Min (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementExpenseVariance__c</fullName>
        <formula>(SettlementExpenseVariance__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Expense Variance (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlement__c</fullName>
        <formula>(Settlement__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxVenueAmount__c</fullName>
        <formula>(VenueAmount__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Venue Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxVenueMax__c</fullName>
        <formula>(VenueMax__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Venue Max (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxVenueMin__c</fullName>
        <formula>(VenueMin__c / (LedgerEntry__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Venue Min (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Ledger Entry Breakout</label>
    <nameField>
        <displayFormat>LEB-{000000}</displayFormat>
        <label>Ledger Entry Breakout ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ledger Entry Breakouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LNE_ApplyTicketScaleRequired</fullName>
        <active>true</active>
        <description>If Rate Type = &quot;Per Cap&quot;, then apply ticket scale is required.</description>
        <errorConditionFormula>AND(ISPICKVAL(RateType__c, &quot;Per Cap&quot;), ISPICKVAL(ApplyTicketScale__c, &quot;&quot;), !$Setup.GeneralSettings__c.BypassAutomation__c)</errorConditionFormula>
        <errorDisplayField>ApplyTicketScale__c</errorDisplayField>
        <errorMessage>If Rate Type = &quot;Per Cap&quot;, Apply Ticket Scale is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Contra_Type_With_Contra_Amount</fullName>
        <active>true</active>
        <description>Contra Type should be selected when a Contra Amount have been entered</description>
        <errorConditionFormula>!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
!ISBLANK(ContraAmount__c) &amp;&amp;
ISBLANK(TEXT(ContraType__c))</errorConditionFormula>
        <errorDisplayField>ContraType__c</errorDisplayField>
        <errorMessage>Contra Type must be selected when entering a Contra Amount.</errorMessage>
    </validationRules>
</CustomObject>